--- a/blog/templates/blog/write.html
+++ b/blog/templates/blog/write.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-<form action="{% url 'blog:write' %}" method='post'>
+<form method='post' enctype="multipart/form-data">
     {% csrf_token %}
     <!-- {{ form.as_p }} -->
     <table class="table">
@@ -12,6 +12,10 @@
         <tr>
             <th>author</th>
             <td>{{ form.author }}</td>
+        </tr>
+        <tr>
+            <th>upload</th>
+            <td>{{ form.upload }}</td>
         </tr>
         <tr>
             <th>created_date</th>
