--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -3,9 +3,18 @@
 {% block content %}
 <h1>BLOG LIST</h1>
 <table class="table">
+    <colgroup>
+        <col width="*">
+        <col width="10%">
+        <col width="20%">
+        <col width="20%">
+    </colgroup>
     <thead>
         <tr>
             <th>title</th>
+            <th>author</th>
+            <th>created_date</th>
+            <th>published_date</th>
         </tr>
     </thead>
     <tbody>
@@ -14,23 +23,36 @@
             <td>
                 <a href="{% url 'blog:post' post.pk %}">{{ post.title }}</a>
             </td>
+            <td>
+                {{ post.author }}
+            </td>
+            <td>
+                {{ post.created_date }}
+            </td>
+            <td>
+                {{ post.published_date }}
+            </td>
         </tr>
         {% endfor %}
     </tbody>
 </table>
 
-<form class="form-inline" action="{% url 'blog:index' %}" method="get">
-    <div class="input-group">
+<form class="form-inline text-center" action="{% url 'blog:index' %}" method="get">
+    <div class="form-group">
         <select name="fd_name" id="" class="form-control">
             <option value="title">title</option>
             <option value="content">content</option>
         </select>
+    </div>
+    <div class="form-group">
         <input type="text" class="form-control" name='q'>
-        <button class="btn btn-secondary" type="submit">Search</button>
+    </div>
+    <div class="form-group">
+        <button class="btn btn-info" type="submit">Search</button>
     </div>
 </form>
 
-<nav>
+<nav class="text-center">
     <ul class="pagination">
         {% if contacts.has_previous %}
         <li>
@@ -55,6 +77,4 @@
         {% endif %}
     </ul>
 </nav>
-
-<a href="{% url 'blog:write' %}" class="btn btn-primary">글쓰기</a>
 {% endblock %}
