--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -33,8 +33,9 @@
     </tr>
 </table>
 
-<a href="{% url 'blog:index' %}" class="btn btn-default">목록</a>
-<a href="{% url 'blog:write' %}" class="btn btn-primary">글쓰기</a>
-<a href="{% url 'blog:modi' post.pk %}" class="btn btn-success">수정</a>
+<div class="text-center">
+    <a href="{% url 'blog:index' %}" class="btn btn-default">목록</a>
+    <a href="{% url 'blog:modi' post.pk %}" class="btn btn-primary">수정</a>
+</div>
 {% endblock %}
 
