--- a/blog/templates/blog/write.html
+++ b/blog/templates/blog/write.html
@@ -1,5 +1,4 @@
 {% extends 'blog/base.html' %}
-
 {% block content %}
 <form method='post' enctype="multipart/form-data">
     {% csrf_token %}
@@ -19,7 +18,9 @@
         </tr>
         <tr>
             <th>created_date</th>
-            <td>{{ form.created_date }}</td>
+            <td>
+                {{ form.created_date }} 
+            </td>
         </tr>
         <tr>
             <th>published_date</th>
@@ -30,6 +31,10 @@
             <td>{{ form.content }}</td>
         </tr>
     </table>
-    <input type="submit" value="save">
+    <div class="text-center">
+        <input type="submit" value="저장" class="btn btn-primary">
+        <a href="{% url 'blog:index' %}" class="btn btn-default">목록</a>
+    </div>
 </form>
+
 {% endblock %}
