add function to prev, next post

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -27,10 +27,10 @@
                 {{ post.author }}
             </td>
             <td>
-                {{ post.created_date }}
+                {{ post.created_date | date:'Y-m-d' }}
             </td>
             <td>
-                {{ post.published_date }}
+                {{ post.published_date | date:'Y-m-d' }}
             </td>
         </tr>
         {% endfor %}
