--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -28,7 +28,7 @@
                 <img src="{{ post.upload.url }}" alt="">
             </a>
             {% endif %}
-            {{ post.content }}
+            {{ post.content | safe }}
         </td>
     </tr>
 </table>
