--- a/blog/templates/blog/write.html
+++ b/blog/templates/blog/write.html
@@ -1,6 +1,8 @@
 {% extends 'blog/base.html' %}
 {% block content %}
+
 <form method='post' enctype="multipart/form-data">
+    {{ form.media }}
     {% csrf_token %}
     <!-- {{ form.as_p }} -->
     <table class="table">
@@ -36,5 +38,6 @@
         <a href="{% url 'blog:index' %}" class="btn btn-default">목록</a>
     </div>
 </form>
+
 
 {% endblock %}
